# wasm-4-tutorial-games

./: .gitattributes  .gitignore  README.md  main.go  snake.go
maze-as/: README.md  package-lock.json  package.json
maze-as/src/: game.ts  main.ts  maze.ts
platformer-as/: README.md  package-lock.json  package.json
platformer-as/src/: main.ts  platformer.ts
snake-as/: README.md  package-lock.json  package.json
snake-as/src/: main.ts  snake.ts
snake-c/: README.md
snake-c/src/: main.c  snake.c  snake.h
snake-d/source/: app.d  snake.d
snake-go/: README.md  main.go  snake.go
snake-nelua/src/: main.nelua  snake.nelua
snake-odin/src/: fruit.img  game.odin  snake.odin
snake-odin/src/w4/: wasm4_wasm32.odin
snake-rust/: .gitattributes  Cargo.toml  README.md  build.sh
snake-rust/src/: game.rs  lib.rs  palette.rs  snake.rs  wasm4.rs
snake-zig/src/: main.zig  snake.zig
src/: main.ts  snake.c  snake.ts
